# C_Projects

./: Readme.MD
SNSH/: CMakeLists.txt  Readme.txt  config.h.in
SNSH/man/: SNSH.8  SNSH_client.8
SNSH/src/: Makefile  Makefile.win  debug.c  debug.h  espeech.c  helper.c  helper.h  main.c  snshimg.h  transfer.c
SNSH/src/client/: Makefile  Makefile.win  main.c
SNSH/src/prs_socket/: Makefile.win  socket.c  socket.h
SNSH/src/prs_socket/tests/: Makefile  Makefile.win  test1.c  test2.c
SNSH/src/transfer/: Makefile.win  main.c
cboot/: Makefile  README.md  boot.c  boot.ld  build.sh  code16gcc.h  funcs.h  makedisk.sh  stage1.c  stage2.c  test.sh
dboot/: bochsrc.txt  build.sh  clean.sh  makedisk.sh  stage1.c  stage1.ld  test.sh
dboot/common/: 16bits.h  graphics.h  io.h  system.h
psh/: CMakeLists.txt  Readme.txt  config.h.in
psh-shouldnt/: Readme.txt
psh-shouldnt/src/: psh_cmd.c
psh/src/: psh_cmd.c
